Fix invalid html
Former-commit-id: 432c94bc044b8d2b7d21309399f01e90a4a9e609

--- a/orig/sma/facta/learoevierhtieh.no/1671438114.html
+++ b/orig/sma/facta/learoevierhtieh.no/1671438114.html
@@ -313,9 +313,9 @@ words[7] = "Gaahtoe aaj guelieh sæjhta jalhts ij sijhth gadtside lovvehtidh.";
 <LI>Dååjrehtalledh joekehth teeksth stuerebe dåehkien uvte buektedh. 
 <LI>Voengen almetji luvnie minnedh jih sjïere sae mien sijjienommigujmie åahpenidh guktie eatnemem joekehthlaakan moenedh (biegke, vearolde, lopme j.j.)</LI></UL>
 <H4>Lohkedh jih tjaeledh</H4>
-<P>Lohkehtimmesne gelkieh learohkh</P><I>
+<P>Lohkehtimmesne gelkieh learohkh</P>
 <UL>
-<LI></I>Barkedh guktie åenehks vaajesh darjodh. 
+<LI>Barkedh guktie åenehks vaajesh darjodh. 
 <LI>Barkedh guktie tjaaleld aamhtesidie lahtestidh. 
 <LI>Teeksth joekehth sjaangerinie tjaeledh (vaajesh, referaath, raabporth j.j.). 
 <LI>Teeksten sisveginie barkedh, eajhnijste ellies dorjesasse, jih lierehtalledh hijven-laakan moenedh jallh laejhtedh. 
@@ -325,9 +325,9 @@ words[7] = "Gaahtoe aaj guelieh sæjhta jalhts ij sijhth gadtside lovvehtidh.";
 <LI>Teekstegietedallemem jih elektronigke baakoegærjam jïjtsh barkose utnedh jih dååjrehtalledh guktie e-mailem seedtedh. 
 <LI>Klaasse- jallh skuvleplaeriebarkose daatamaasjinam jih multimeedijah utnedh</LI></UL>
 <H4>Gïele- jih kultuvremaahtoe</H4>
-<P>Lohkehtimmesne gelkieh learohkh</P><I>
+<P>Lohkehtimmesne gelkieh learohkh</P>
 <UL>
-<LI></I>Baakoedåehkiejgujmie barkedh, vearbe- jih novmenesyjjehtimmesne diftångemålsomi jih vokaale-jeatjahtehtemigujmie. 
+<LI>Baakoedåehkiejgujmie barkedh, vearbe- jih novmenesyjjehtimmesne diftångemålsomi jih vokaale-jeatjahtehtemigujmie. 
 <LI>Giehtjedidh mij lea saemien jih daaroen gïeline seamma jih joekehth. 
 <LI>Voenges dajven vaajesh jih soptsesh tjöönghkedh jih sjïere öörnedh. 
 <LI>Såemies njaalmeld sjaangerinie joekehth vierhtiej bïjre digkiedidh, v.g. buerkiestimmine jih goerehtimmine. 
