fjerna html rusk som laga problemer for konverteringa
Former-commit-id: 21e47caf7778bc890ff78f55e4d5a59c583f0bb3

--- a/orig/sma/bible/osko/index.php_kat_id=1_art_id=147.html
+++ b/orig/sma/bible/osko/index.php_kat_id=1_art_id=147.html
@@ -122,7 +122,7 @@
 <h1>Mannasinie skyllije?</h1><br/>
 	<span style="color: #222222"><font size="3"><font face="Times New Roman">Manne dam darjoem ihke lea akte tjaebpies vuekie. Gaptam &aring;adtjoem. J&iuml;h j&iuml;jnjh fuelhkieh skyllemasse b&aring;etieh.<o:p></o:p></font></font></span>
 <br/><br/>
-	<font size="3"><font face="Times New Roman"><span style="color: #222222">Kar</span><span lang="I-SAMI-NO" style="color: #222222; mso-ansi-language: i-sami-no">i</span><span style="color: #222222">anne 14 jaepien b&aring;eries<o:p></o:p></span></font></font>
+	<font size="3"><font face="Times New Roman"><span style="color: #222222">Karianne 14 jaepien b&aring;eries<o:p></o:p></span></font></font>
 <div align="right"><a href="print.php?kat_id=&amp;art_id=147">Utskriftsvennlig versjon</a></div></div>
 <div class="skille620"><img src="design/gfx/skille620b.gif" alt="skille620b" width="640" height="20"/></div>
 <h3>kommentarer(1):</h3>
