fjerna en nob-setning som ikke hørte til
Former-commit-id: 6b2218fc4b969dadfead06966beed7541bed0b98

--- a/orig/sma/admin/sd/samediggi.no/giele_reeremedajve-saemien-gielide_saemiedigkien-tjieltekonferanse-lea-heajhteme.html
+++ b/orig/sma/admin/sd/samediggi.no/giele_reeremedajve-saemien-gielide_saemiedigkien-tjieltekonferanse-lea-heajhteme.html
@@ -456,8 +456,7 @@ Telefakse: +47 78 47 40 90<br /><a href="mailto:samediggi@samediggi.no" target="
 Saemiedigkie - Sametinget<br />
 Ávjovárgeaidnu 50 <br />9730 Karasjok/Kárášjohka</p><p><b><a href="/Saemiedigkien-bijre/Gaskesadth-mijjine/Bargiid-oktavuodadiedut" target="_self">Gaskesadtemebïevnesh mijjen barkijidie daesnie gaavnh.</a></b></p>    </address>
     <div class="facebook">
-    	<a href="http://www.facebook.com/samediggi">Saemiedigkie</a>    	<p>
-På Facebook kan du diskutere med oss og foreslå saker vi kan jobbe med</p>
+    	<a href="http://www.facebook.com/samediggi">Saemiedigkie</a>    	
         <div class="rss" >
             <p><a href="/rss/feed/main">Rss feed</a></p>
         </div>
