fjerna feil tagging i liste, og dermed fungerer parallelliseringa
Former-commit-id: 6618878dee0a1dd686b5cb7946310db059f51c5d

--- a/orig/sma/bible/osko/index.php_kat_id=7_art_id=5.html
+++ b/orig/sma/bible/osko/index.php_kat_id=7_art_id=5.html
@@ -126,20 +126,13 @@
 <br/><br/>
 	<u><span lang="NO-BOK">Saemien g&aelig;rhkoeraerien l&iuml;htsegh leah:</span></u>
 <br/><br/>
-	Anne Dalheim (<span lang="NO-BOK">&aring;vtehke</span>),
-<br/><br/>
-	Ingar Nikolaisen Kuoljok, <span lang="NO-BOK">julevsaemien tjirkije / &Aring;arjel-H&aring;logalaanten bispedajve,</span>
-<br/><br/>
-	Jonhild Joma, <span lang="NO-BOK">&aring;arjelsaemien tjirkije/ Nidarosen bispedajve,</span>
-<br/><br/>
-	<span lang="NO-BOK">Kirsten Isaksen, noerhtesaemin tjirkije / Noerhte-H&aring;logalaanten bispedajv</span>
-<br/><br/>
-	Mari Helander, <span lang="NO-BOK">saemien tjirkije &Aring;arjel-N&oslash;&oslash;rjeste, </span>
-<br/><br/>
-	Jovnna Z Dunfjell, <span lang="NO-BOK">Saemiedigkien tjirkije</span>
-<br/><br/>
-	Tor Berger J&oslash;rgensen, <span lang="NO-BOK">Bispetj&aring;anghkoen tjirkije</span>
-<div align="right"><a href="print.php?kat_id=&amp;art_id=5">Utskriftsvennlig versjon</a></div></div>
+	Anne Dalheim (&aring;vtehke), Ingar Nikolaisen Kuoljok, julevsaemien tjirkije / &Aring;arjel-H&aring;logalaanten bispedajve,
+	Jonhild Joma, &aring;arjelsaemien tjirkije/ Nidarosen bispedajve,
+	Kirsten Isaksen, noerhtesaemin tjirkije / Noerhte-H&aring;logalaanten bispedajv,
+	Mari Helander, saemien tjirkije &Aring;arjel-N&oslash;&oslash;rjeste, 
+	Jovnna Z Dunfjell, Saemiedigkien tjirkije,
+	Tor Berger J&oslash;rgensen, Bispetj&aring;anghkoen tjirkije
+</div>
 
 				</div>
 				<div class="spalte300">
