--- a/orig/sma/admin/depts/udir.no/11_template-tredje-trinn-i-enkel-tabell.html
+++ b/orig/sma/admin/depts/udir.no/11_template-tredje-trinn-i-enkel-tabell.html
@@ -912,7 +912,7 @@
 
         <table id="TwoDim" summary="Tabell for å navigere i veiledningen til lærerplanen">
         <tr>
-            <th class="colStepHead">Dal-<br />tese</th>
+            <th class="colStepHead">Daltese</th>
             <th class="colSubjectHead"></th>
         </tr>
     
