New html pages from samediggi.no
Former-commit-id: 64724fccc082c96a21d4aeda77530f68c213541b

--- a/orig/sma/admin/sd/samediggi.no/stoerretjaaangkoestaavroe.html
+++ b/orig/sma/admin/sd/samediggi.no/stoerretjaaangkoestaavroe.html
@@ -2,7 +2,37 @@
   <body>
     <div class="newsIntroBox">		 				
 								<h1>Stoerretjåangkoeståvroe</h1>
-	<div class="introContent"><div class="ezrichtext-field"><p>Stoerretjåanghkoeståvroe aamhteselæstoem dorje, Saemiedigkien stoerretjåanghkojde gohtjede jïh dejtie stuvrie njoelkedassi mietie Saemiedigkien barkoeöörnegisnie.</p><p>Stoerretjåanghkoeståvroen laavenjassh leah gaskem jeatjah permisjovneohtsemh sjæjsjalidh, raeriestimmieh stoerretjåanghkose buektedh dejnie gyhtjelassine mah leah Saemiedigkien barkoeöörnegen bïjre jïh daerpies nænnoestimmieh vaeltedh aamhteseryöjredimmiej bïjre stoerretjåanghkojde.</p><p>Stoerretjåanghkoeståvrosne vïjhte lïhtsegh mah veeljesuvvieh stoerretjåanghkoen tjirkijijstie jïh tjirkiji gaskem. Veeljemeboelhken 2017-2021 daah tjirkijh stoerretjåanghkoeståvrosne:</p>
+	<div class="introContent"><div class="ezrichtext-field"><p>Stoerretjåanghkoeståvroe aamhteselæstoem dorje, Saemiedigkien stoerretjåanghkojde gohtjede jïh dejtie stuvrie njoelkedassi mietie Saemiedigkien barkoeöörnegisnie.</p><p>Stoerretjåanghkoeståvroen laavenjassh leah gaskem jeatjah permisjovneohtsemh sjæjsjalidh, raeriestimmieh stoerretjåanghkose buektedh dejnie gyhtjelassine mah leah Saemiedigkien barkoeöörnegen bïjre jïh daerpies nænnoestimmieh vaeltedh aamhteseryöjredimmiej bïjre stoerretjåanghkojde.</p><p>Stoerretjåanghkoeståvrosne vïjhte lïhtsegh mah veeljesuvvieh stoerretjåanghkoen tjirkijijstie jïh tjirkiji gaskem. Veeljemeboelhken 2013-2017 daah tjirkijh stoerretjåanghkoeståvrosne.</p><p> </p>
+
+    	<div class="personListCenter">
+	
+		</div>
+
+
+
+    	<div class="personListCenter">
+	
+		</div>
+
+
+
+    	<div class="personListCenter">
+	
+		</div>
+
+
+
+    	<div class="personListCenter">
+	
+		</div>
+
+
+
+    	<div class="personListCenter">
+	
+		</div>
+
+
 </div>
 </div>
 
