--- a/orig/sma/admin/sd/samediggi.no/mirrestalleme.html
+++ b/orig/sma/admin/sd/samediggi.no/mirrestalleme.html
@@ -5,7 +5,7 @@
     
     		<div class="introContent introContentCorepage">
 
-                            <div class="ezrichtext-field"><p>Saemiedigkien barkoe våaroeminie åtna staate Nöörje lea tseegkeme eatnamasse göökte åålmegidie, saemieh jïh daaroeh. Gåabpegh åålmegh dam seamma reaktam jïh dejtie seamma krïevenasside utnieh sijjen kultuvrem jïh sijjen gïelem evtiedidh. Mijjen reaktah goh saemieh, åålmegh jïh aalkoealmetjh leah tsegkieh mijjen bijjemes politihkesne jïh mijjen visjovnine saemien siebriedahkide. Mijjen ulmie lea orreme aarvoeh evtiedidh goh seammavyörtegsvoete, mïrrestalleme, solidariteete jïh raeffies ektiejielede åålmegi gaskem. Ulmie lea nåake sïerredimmien vööste barkedh jïh tjïelke seammagïetedimmiem buektiehtidh.</p>
+                            <div class="ezrichtext-field"><p>Saemiedigkien barkoe våaroeminie åtna staate Nöörje lea tseegkesovveme göökte åålmegi eatnamasse, saemieh jïh daaroeh. Gåabpegh åålmegh dam seamma reaktam jïh dejtie seamma krïevenasside utnieh sijjen kultuvrem jïh sijjen gïelem evtiedidh. Mijjen reaktah goh saemieh, åålmegh jïh aalkoealmetjh leah tsegkieh mijjen bijjemes politihkesne jïh mijjen visjovnine saemien siebriedahkide. Mijjen ulmie lea orreme aarvoeh evtiedidh goh seammavyörtegsvoete, mïrrestalleme, solidariteete jïh raeffies ektiejielede åålmegi gaskem. Ulmie lea nåake sïerredimmien vööste barkedh jïh tjïelke seammagïetedimmiem buektiehtidh.</p>
 </div>
 
             
